--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ html{
 }
 
 .background {
-    background: rgba(0, 0, 0, 0.5) url('../background.jpg');
+    background: rgba(0, 0, 0, 0.5) url('/background.jpg');
     background-size: cover;
     background-blend-mode: darken;
 
